# cyipopt-wheels

./: README.rst  build_manylinux_wheels.sh  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
tools/: append_bundled_licenses.sh  build_ipopt_manylinux.sh  install_ipopt_conda.sh  setup_ipopt_pyodide.sh  strip_wasm_features.py  test_wheel.py
